--- a/oop2018.secondaprova.gruppo07/src/oop2018/secondaprova/gruppo07/MainFrame.form
+++ b/oop2018.secondaprova.gruppo07/src/oop2018/secondaprova/gruppo07/MainFrame.form
@@ -591,6 +591,9 @@
             <Property name="text" type="java.lang.String" value="Rimuovi tutto"/>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rimuoviAllButtonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
