--- a/oop2018.secondaprova.gruppo07/src/oop2018/secondaprova/gruppo07/MainFrame.form
+++ b/oop2018.secondaprova.gruppo07/src/oop2018/secondaprova/gruppo07/MainFrame.form
@@ -478,7 +478,7 @@
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="resultLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="24" max="32767" attributes="0"/>
+              <EmptySpace pref="32" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -517,7 +517,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jScrollPane2" pref="337" max="32767" attributes="0"/>
+                      <Component id="jScrollPane2" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Component id="inserisciButton" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -562,6 +562,9 @@
         </Container>
         <Component class="javax.swing.JButton" name="inserisciButton">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/icone/addIcon.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Inserisci"/>
           </Properties>
           <Events>
